@startuml devices

' abstract class mem {
'     size:uint32_t;
'     process():int:override;
' }

' vmem --|> mem
' class vmem{
'     mem_space:uint8_t*;
'     getB():uint8_t;
'     get2B():uint16_t;
'     get4B():uint32_t;
'     putB();
'     put2B();
'     put4B();
'     process():int:override;
' }

' ' nvmem --|> mem
' class nvmem {
'     mem_file_path:std::string;
'     fp:std::fstream;
'     getB():uint8_t;
'     get2B():uint16_t;
'     get4B():uint32_t;
'     putB();
'     put2B();
'     put4B();
'     sync();
'     process():int:override;
' }

' bios --|> nvmem
' class bios {
'     process():int:override;
' }

' ' flash --|> nvmem
' class flash{
'     process():int:override;
' }

' ' gpu --|> vmem
' class gpu{
'     process():int:override;
'     static draw(void* arg):void;
'     static thread_function(void* arg):void*;
' }

' ' keyboard --|> vmem
' class keyboard{
'     cache:std::queue<char>;
'     process():int:override;
' }

' ' net_card --|> vmem
' class net_card {
'     send_message();
'     receive_message():std::string;
'     static thread_function(void* arg):void*;
'     process():int:override;
' }

' ' ram --|> vmem
' class ram {
'     process():int:override;
' }

' ' screen --|> vmem
' class screen{
'     process():int:override;
' }

' net_card -- gpu
' keyboard -- ram
' ram -- screen
' flash -- bios

' devices o-- bios
' devices o-- keyboard
' devices o-- ram
' devices o-- flash
' devices o-- screen
' devices o-- net_card
' devices o-- gpu
' devices o-- pmc
devices --> rib
class devices {
    my_bios:bios*;
    my_keyboard:keyboard*;
    my_ram:ram*;
    my_flash:flash*;
    my_screen:screen*;
    my_net_card:net_card*;
    my_gpu:gpu*;
    my_pmc:pmc*;
    process():int:override;
}

class monitor {
    process():int:override;
}

rib <-- monitor
class rib{
    fresh_port();
    get_flag();
    dispatch():uint32_t;
    set_flag();
}

class tlb{
    size_pages1=64:uint32_t;
    size_pages2=1024:uint32_t;
    pages1:std::map<uint32_t,uint32_t>;
    pages2:std::map<uint32_t,uint32_t>;
    insert();
    check_tlb1():int;
    check_tlb2():int;
    check():int;
}

mmu *-- tlb
mmu <-- monitor
class mmu {
        uint32_t addr=0;
        uint32_t is_hit=0;
        uint32_t is_enable=0;
        tlb my_tlb;
        uint32_t get_addr() const;
        uint32_t get_is_hit() const;
        uint32_t get_is_enable() const;
        uint32_t check_page_list(Vtop* top);
        uint32_t convert(Vtop* top,devices* devices);
}

rib -- devices

@enduml
